// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModifiersList /> should pass custom props to correct blocks 1`] = `
<div
  className="wrapper-test-class"
  id={4}
>
  <div
    className="sizes-table-wrapper"
  >
    <ForwardRef(Link)
      className="sizes-table-link"
      href="test.ru/123"
    >
      Таблица размеров
      <ForwardRef(StatementSVG)
        className="sizes-table-icon"
        role="presentation"
      />
    </ForwardRef(Link)>
  </div>
  <div
    className="items-container-test-class"
  >
    <ModifierItem
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should render correct with sizesTableUrl 1`] = `
<ModifiersList
  sizesTableUrl="test.ru/123"
>
  <div>
    <div
      className="sizes-table-wrapper"
    >
      <ForwardRef(Link)
        className="sizes-table-link"
        href="test.ru/123"
      >
        <a
          className="link sizes-table-link color__brand-blue hover-color__brand-deep-blue"
          href="test.ru/123"
        >
          Таблица размеров
          <ForwardRef(StatementSVG)
            className="sizes-table-icon"
            role="presentation"
          >
            <svg
              className="sizes-table-icon"
              height={24}
              role="presentation"
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M8 16a1 1 0 001 1h4a1 1 0 100-2H9a1 1 0 00-1 1zM9 13a1 1 0 110-2h6a1 1 0 110 2H9zM8 8a1 1 0 001 1h6a1 1 0 100-2H9a1 1 0 00-1 1z"
              />
              <path
                clipRule="evenodd"
                d="M6 2h12a3 3 0 013 3v14a3 3 0 01-3 3H6a3 3 0 01-3-3V5a3 3 0 013-3zm0 2a1 1 0 00-1 1v14a1 1 0 001 1h12a1 1 0 001-1V5a1 1 0 00-1-1H6z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(StatementSVG)>
        </a>
      </ForwardRef(Link)>
    </div>
  </div>
</ModifiersList>
`;

exports[`<ModifiersList /> should renders correctly with correct props 1`] = `
<div>
  <div>
    <ModifierItem
      currencyGrapheme="$"
      key="0"
      name="testModifier - 1"
      onClick={[Function]}
      price={123}
      type="text"
    />
    <ModifierItem
      currencyGrapheme="$"
      key="1"
      name="testModifier - 2"
      onClick={[Function]}
      price={233}
      type="text"
    />
  </div>
</div>
`;

exports[`<ModifiersList /> should renders correctly without props 1`] = `<div />`;
